# mcp-adk-ap2-agent-pokemon

./: .gitignore  CLEANUP_SUMMARY.txt  MAKEFILE_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_GUIDE.md  claude_desktop_config.json  jest.config.js  main.ts  package-lock.json  package.json  pokemon-gen1.json  pokemon_marketplace.db.backup  pytest.ini  start_ap2_demo.sh  test_mcp.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_ROADMAP.md  copilot-instructions.md
adk-agent/: .env  .env.example  README.md  pokemon_agent.py  pyproject.toml
ap2-integration/: .env  .env.example  README.md  pyproject.toml
ap2-integration/scripts/: migrate_cart_schema.py  migrate_json_to_db.py
ap2-integration/src/: __init__.py
ap2-integration/src/common/: __init__.py  ap2_types.py  jwt_validator.py  mcp_client.py  pokemon_utils.py  utils.py
ap2-integration/src/credentials_provider/: __main__.py  server.py
ap2-integration/src/database/: __init__.py  engine.py  models.py  repository.py
ap2-integration/src/merchant_agent/: __init__.py  __main__.py  server.py
ap2-integration/src/payment_processor/: __main__.py  server.py
ap2-integration/src/roles/: merchant_agent.py  shopping_agent.py  shopping_agent_simple.py
ap2-integration/src/shopping_agent/: __main__.py  agent.py  web_ui.py
mcp-server/: README.md  package-lock.json  package.json
scripts/: README.md  clean.sh  run-adk.sh  run-ap2-agents.sh  run-ap2-demo.sh  run-full-demo.sh  run-merchant.sh  run-shopping-agent.sh  (+4 more)
src/ap2/: README.md  __init__.py  pyproject.toml
src/ap2/agents/: __init__.py
src/ap2/agents/credentials/: __main__.py  server.py
src/ap2/agents/merchant/: __main__.py  server.py
src/ap2/agents/payment_processor/: __main__.py  server.py
src/ap2/agents/shopping/: __main__.py  agent.py  web_ui.py
src/ap2/protocol/: __init__.py  session.py  types.py  validators.py
(+112 files in other folders)
