[project]
name = "pokemon-ap2-integration"
version = "0.1.0"
description = "AP2 Protocol integration for Pokemon marketplace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "mcp>=1.3.0",
    "google-genai>=0.7.1",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
